<resources>

    <!--    App Name-->
    <string name="app_name">Appnext</string>

    <!--    Dashboard Fragment-->
    <string name="dashboard_fragment_daily_activity">Daily Activity</string>
    <string name="dashboard_fragment_daily_goal">Daily Goal</string>
    <string name="dashboard_fragment_be_active_be_healthy_set_goals">Be active. Be healthy. Set goals.</string>
    <string name="dashboard_fragment_weekly_progress">Weekly Progress</string>
    <string name="dashboard_fragment_set_realistic_goals">Set realistic goals</string>
    <string name="dashboard_fragment_activity_color_explanation">Activity</string>
    <string name="dashboard_fragment_daily_goal_color_explanation">Daily goal</string>
    <string name="dashboard_fragment_timeline">Timeline</string>

    <!--    Dashboard Repository-->
    <string name="dashboard_repository_general_error">General error</string>

    <!--    Fragment Timeline-->
    <string name="fragment_timeline_title">Timeline</string>
    <!--    Timeline Item Viewholder-->
    <string name="viewholder_time_item_steps">Steps:</string>
    <string name="viewholder_time_item_steps_value">%1$s/%2$s</string>
    <string name="viewholder_time_item_distance_in_meters">%1$s M</string>
    <string name="viewholder_time_item_distance_in_kilometers">%1$s KM</string>
    <string name="viewholder_time_item_kcal_value">%1$s KCAL</string>
</resources>